--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">BeerTime</string>
-    <string name="label_splash">Beer Time</string>
+    <string name="label_splash_beer">Beer</string>
+    <string name="label_splash_time">Time</string>
+    <string name="verificando_adega">Verificando adega…</string>
 </resources>
