--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,13 @@
 <resources>
-    <string name="app_name">BeerTime</string>
+    <string name="app_name">Beer Time</string>
     <string name="label_splash_beer">Beer</string>
     <string name="label_splash_time">Time</string>
     <string name="verificando_adega">Verificando adega…</string>
+    <string name="btn_yes">Sim</string>
+    <string name="btn_no">Não</string>
+    <string name="btn_reload">Recarregar</string>
+    <string name="btn_solve">Resolver</string>
+    <string name="btn_leave">Sair</string>
+    <string name="exit_message">Tem certeza que quer sair?</string>
+    <string name="internet_off_message">Você está sem conexão!</string>
 </resources>
