--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Beer Time</string>
     <string name="label_splash_beer">Beer</string>
     <string name="label_splash_time">Time</string>
-    <string name="verificando_adega">Verificando adega…</string>
+    <string name="checking_beer_cellar">Verificando adega…</string>
     <string name="btn_yes">Sim</string>
     <string name="btn_no">Não</string>
     <string name="btn_reload">Recarregar</string>
